# resume-boost

./: AGENTS.md  build-backend.sh  docker-compose.yml  package-lock.json  package.json  render.yaml  requirements.txt  start-backend.sh
backend/: Dockerfile  openapi.yaml  pyproject.toml  render_start.sh  requirements.txt  sql_app.db
backend/app/: database.py  db.py  main.py  models.py  sql_models.py
backend/app/api/: auth.py  jobs.py  resume.py
backend/tests/: test_api.py
backend/tests_integration/: conftest.py  test_flow.py
frontend/: Dockerfile  package-lock.json  package.json  tailwind.config.ts  vite.config.ts
frontend/src/: App.tsx
frontend/src/components/: JobCard.tsx  Navbar.tsx  ResumeUpload.test.tsx  ScoreCircle.test.tsx
frontend/src/components/ui/: button.tsx
frontend/src/lib/: axios.ts
frontend/src/pages/: Auth.tsx
frontend/src/services/: api.test.ts  api.ts
src/: index.css
src/components/: JobCard.test.tsx  ResumeUpload.tsx  ScoreCircle.tsx
src/contexts/: AuthContext.test.tsx  AuthContext.tsx
src/pages/: Dashboard.tsx  Index.tsx
src/services/: api.test.ts  api.ts
