[project]
name = "backend"
version = "0.1.0"
description = "Resume Boost Backend API"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi==0.128.0",
    "uvicorn==0.40.0",
    "pydantic[email]==2.12.5",
    "python-multipart==0.0.21",
    "pytest==9.0.2",
    "httpx==0.28.1",
    "sqlalchemy==2.0.45",
    "psycopg2-binary==2.9.11",
    "passlib[bcrypt]==1.7.4",
]
